Thu Oct 01 10:06:13 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/basename.c src/replacements/gettimeofday.c:
	- remove wrong comments

Thu Sep 25 10:05:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c:
	- rollback changes, our version, was correct

Fri Sep 19 15:37:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/Makefile.am: fix compile

Thu Sep 18 10:50:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- more error set in odbc_tds2sql

Thu Sep 18 10:17:49 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: reduce use of #if

Wed Sep 17 13:25:51 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: typo error

Wed Sep 17 14:14:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/.cvsignore src/tds/Makefile.am src/tds/convert.c:
	* src/tds/data.c src/tds/read.c src/tds/types.pl(added):
	- autogenerate some functions based on types.txt

Sun Sep 14 09:44:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- renamed TDSSOCKET->no_data_conv to TDSSOCKET->use_iconv

Sat Sep 13 09:18:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix compile if no --enable-development

Fri Sep 12 17:05:54 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/token.c:
	- removed is_binary_type macro, not used anymore
	- removed broken_money setting, not used
	- added no_data_conv to disable data conversions
	* src/odbc/odbc.c src/odbc/unittests/data.c:
	- updated to support no_data_conv

Thu Sep 11 17:07:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c src/odbc/sql2tds.c: